tests/neg/override-scala2-macro.check
-- [E164] Declaration Error: tests/neg/override-scala2-macro/B_2.scala:2:22 --------------------------------------------
2 |  override inline def foo: Unit = ??? // error
  |                      ^
  |                error overriding method foo in class A of type => Unit;
  |                  method foo of type => Unit cannot be used here - only Scala-2 macros can override Scala-2 macros
